# PiYTmusic

./: .gitattributes  .gitignore  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: code-review-2026-07.md  feature-roadmap.md  raspberry-pi.md  release-plan.md
scripts/: setup-pi.sh  test-player.mjs  update-pi.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.linux.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: appid.rs  lib.rs  main.rs  media.rs  platform.rs  secure_store.rs  ytdlp.rs
src/components/layout/: about-dialog.tsx  app-shell.tsx  app-sidebar.tsx  channel-picker-dialog.tsx  drag-snap-overlay.tsx  entity-page-header.tsx  floating-player-app.tsx  floating-player-sync.tsx  karaoke-view.tsx  lyrics-view.tsx  player-bar-bottom.tsx  player-bar.tsx  player-more-menu.tsx  premium-gate-dialog.tsx  queue-panel.tsx  top-bar.tsx  update-banner.tsx  whats-new-dialog.tsx
src/components/settings/: appearance-tab.tsx  general-tab.tsx  primitives.tsx  settings-dialog.tsx  storage-tab.tsx
src/components/shared/: artist-links.tsx  entity-header.tsx  feed-view.tsx  jump-to-current-button.tsx  like-buttons.tsx  shelf-card.tsx  shelf-carousel.tsx  shelf-grid.tsx  thumbnail.tsx  track-context-menu.tsx  track-list.tsx
src/components/ui/: animated-tabs.tsx  button.tsx  dialog.tsx  popover.tsx  segmented.tsx  sidebar.tsx  skeleton.tsx  slider.tsx  switch.tsx  tabs.tsx
src/lib/: audio-engine.ts  cache-cleanup.ts  cover-art.ts  floating-player.ts  format.ts  platform.ts  playback-notifications.ts  player-drag.ts  query-client.ts  stream.ts  updater.ts  whats-new.ts  ytdlp.ts
src/lib/innertube/: account.ts  album.ts  alternate-source.ts  artist.ts  channels.test.ts  channels.ts  client.ts  explore.ts  home.ts  library.ts  mutations.ts  parse-count.test.ts  parse-count.ts  player.ts  playlist.ts  radio.ts  search.test.ts  search.ts  shared.test.ts  shared.ts  types.ts
src/lib/lyrics/: genius.ts  krc.test.ts  krc.ts  kugou.ts  lrclib.ts  match.test.ts  match.ts  musixmatch.ts  netease.ts  parse-lrc.test.ts  parse-lrc.ts  qq-serialize.test.ts  qq.ts  sources.ts  types.ts  ytmusic.ts  zh-script.ts
src/lib/store/: accounts.ts  channel-picker.ts  entity-header.ts  karaoke.ts  layout.ts  pinned-playlists.ts  playback.test.ts  playback.ts  playlist-sort.ts  premium-gate.ts  premium.ts  search-history.ts  settings-dialog.ts  settings.ts  track-source.ts  update.ts  whats-new.ts
src/routes/: __root.tsx  album.$id.tsx  artist.$id.tsx  charts.tsx  explore.tsx  index.tsx  library.tsx  moods.tsx  moods_.$id.tsx  new-releases.tsx  playlist.$id.tsx  search.tsx
