[package]
name = "piytmusic"
version = "0.3.0"
description = "PiYTmusic — fast, responsive YouTube Music desktop client"
authors = ["George Shyshov"]
license = "GPL-3.0-only"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "piytmusic_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# default-features minus `cookies`: the plugin's persistent cookie store
# (app-cache/.cookies) silently captured Google's rotated session cookies
# while our requests kept replaying the static jar snapshot — Google reads
# that divergence as stolen-cookie replay and revokes the session within
# hours. We echo rotations into the jar ourselves (merge_response_cookies),
# so the shadow store must not exist: it also attached partial cookie sets
# to requests that carried no explicit Cookie header, and it kept session
# security cookies in plaintext next to our DPAPI-encrypted jar.
tauri-plugin-http = { version = "2", default-features = false, features = [
    "unsafe-headers",
    "rustls-tls",
    "http2",
    "charset",
    "macos-system-configuration",
] }
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
reqwest = { version = "0.12", default-features = false, features = ["native-tls"] }
urlencoding = "2"
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "process", "sync", "net"] }
axum = "0.7"
tower-http = { version = "0.6", features = ["cors", "fs"] }
tower = "0.5"
cookie = "0.18"
time = "0.3"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
# OS media controls: on Windows this is the System Media Transport Controls
# (the media tile in Quick Settings / the volume flyout, the lock screen, and
# the hardware media keys). We create the SMTC ourselves from the host process
# so the tile resolves to PiYTmusic's own identity — the webview's built-in media
# session can't, because it belongs to the msedgewebview2.exe child process and
# shows up as "Unknown app". See src/media.rs.
souvlaki = "0.7"

[target.'cfg(target_os = "linux")'.dependencies]
# At-rest encryption for the cookie jar. Linux has no DPAPI equivalent,
# and binding to libsecret would make the jar undecryptable on the
# keyring-less Raspberry Pi OS images this build targets — so we derive
# a machine + install bound key ourselves. All three are pure Rust with
# no C dependencies, which keeps a native `cargo build` on the Pi from
# needing extra -dev packages. See src/secure_store.rs.
chacha20poly1305 = "0.10"
sha2 = "0.10"
getrandom = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security_Cryptography",
    # SetCurrentProcessExplicitAppUserModelID — pins our AppUserModelID onto the
    # process so the SMTC media tile resolves (via the installer's matching Start
    # Menu shortcut) to "PiYTmusic" instead of "Unknown app". See src/appid.rs.
    "Win32_UI_Shell",
] }

[dev-dependencies]
# ServiceExt::oneshot for the stream-server routing test.
tower = { version = "0.5", features = ["util"] }

